--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^7.0.2",
     "react": "^19.0.0",
     "react-d3-tree": "^3.6.6",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
